Loading all the models from the repository correctly.

--- a/table.tex
+++ b/table.tex
@@ -3,11 +3,11 @@
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
 \multirow{2}{=}{Model 2 - anticancer peptides} 
-  & Li et al. \cite{li2020prediction} & 0.877 & 0.961 & 0.927 & 0.848 & - & - & - & - & - & -\\
+ & Yu et al. \cite{yu2020deepacp} & 0.792 & - & 0.849 & 0.704 & 0.920 & 0.780 & 0.878 & 0.829 & 0.662 & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
 \multirow{2}{=}{Model 3 - anticancer peptides} 
- & Yu et al. \cite{yu2020deepacp} & 0.792 & - & 0.849 & 0.704 & 0.920 & 0.780 & 0.878 & 0.829 & 0.662 & -\\
+  & Li et al. \cite{li2020prediction} & 0.877 & 0.961 & 0.927 & 0.848 & - & - & - & - & - & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
 \multirow{2}{=}{Model 4 - anticancer peptides (alternative)} 
@@ -34,11 +34,11 @@
  & Manavalan et al. \cite{manavalan2019mahtpred}  & 0.821 & 0.874 & 0.848 & 0.697 & 0.903 & 0.894 & 0.873 & 0.883 & 0.767 & 0.951\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 10 - antimalarial peptides (alternative)} 
+\multirow{2}{=}{Model 10 - antimalarial peptides} 
  & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.985 & 1.000 & 0.989 & 0.957 & 0.987\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 11 - antimalarial peptides (main)} 
+\multirow{2}{=}{Model 11 - antimalarial peptides} 
  & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 1.000 & 0.979 & 0.980 & 0.815 & 0.921\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
@@ -82,7 +82,7 @@
  & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.924 & 0.952 & 0.938 & 0.875 & 0.982\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 22 - blood–brain barrier	peptides} 
+\multirow{2}{=}{Model 22 - blood–brain barrier peptides} 
  & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.882 & 0.809 & 0.842 & 0.688 & 0.992\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
@@ -106,39 +106,39 @@
  & Chaudhary et al. \cite{chaudhary2016web} & 0.960 & 0.946 & 0.953 & 0.910 & - & 0.964 & 0.991 & 0.964 & 0.930 & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 28 - identification of hotspots} 
+\multirow{2}{=}{Model 28 - recombination spots} 
  & Khan et al. \cite{khan2020prediction} & 0.962 & 0.959 & 0.958 & 0.916 & 0.965 & - & - & - & - & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 29 - lncRNA (Homo sapiens)} 
+\multirow{2}{=}{Model 29 - lncRNA (\textit{Homo sapiens})} 
   & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & 0.966 & 0.980 & 0.973 & - & 0.993\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 30 - lncRNA (Mus musculus)} 
+\multirow{2}{=}{Model 30 - lncRNA (\textit{Mus musculus})} 
   & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & 0.954 & 0.915 & 0.935 & - & 0.973\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 31 - lncRNA (Triticum aestivum)} 
+\multirow{2}{=}{Model 31 - lncRNA (\textit{Triticum aestivum})} 
   & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & 0.952 & 0.905 & 0.928 & - & 0.963\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 32 - lncRNA (Zea mays)} 
+\multirow{2}{=}{Model 32 - lncRNA (\textit{Zea mays})} 
   & Meng et al. \cite{meng2021plncrna} & 0.979 & - & 0.965 & - & 0.993 & - & - & - & - & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 33 - m5C sites (Arabidopsis thaliana)} 
+\multirow{2}{=}{Model 33 - m5C sites (\textit{Arabidopsis thaliana})} 
   & Lv et al. \cite{lv2020evaluation} & 0.657 & 0.757 & 0.707 & 0.416 & 0.765 & 0.724 & 0.756 & 0.740 & 0.480 & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 34 - m5C sites (Homo sapiens)} 
+\multirow{2}{=}{Model 34 - m5C sites (\textit{Homo sapiens})} 
   & Lv et al. \cite{lv2020evaluation} & 0.900 & 0.917 & 0.908 & 0.817 & 0.963 & - & - & - & - & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 35 - m5C sites (Mus musculus)} 
+\multirow{2}{=}{Model 35 - m5C sites (\textit{Mus musculus})} 
   & Lv et al. \cite{lv2020evaluation} & 1.000 & 1.000 & 1.000 & 1.000 & 1.000 & - & - & - & - & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
-\multirow{2}{=}{Model 36 - m5C sites (Saccharomyces cerevisiae)} 
+\multirow{2}{=}{Model 36 - m5C sites (\textit{Saccharomyces cerevisiae})} 
   & Lv et al. \cite{lv2020evaluation} & 1.000 & 1.000 & 1.000 & 1.000 & 1.000 & - & - & - & - & -\\
   & BioAutoML-FAST & & & & & & & & & & \\
 \midrule
