--- a/table_filled.tex
+++ b/table_filled.tex
@@ -3,197 +3,197 @@
   & BioAutoML-FAST & 0.972 $\pm$ 0.000 & 0.997 $\pm$ 0.000 & 0.972 $\pm$ 0.000 & \textbf{0.945} $\pm$ 0.000 & \textbf{0.980} $\pm$ 0.000 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 2 - anticancer peptides} 
- & Li et al. \cite{li2020prediction} & \textbf{0.877} & \textbf{0.961} & \textbf{0.927} & \textbf{0.848} & - & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.852 $\pm$ 0.008 & 0.853 $\pm$ 0.016 & 0.852 $\pm$ 0.008 & 0.708 $\pm$ 0.017 & 0.922 $\pm$ 0.007 & 0.834 $\pm$ 0.011 & 0.844 $\pm$ 0.045 & 0.839 $\pm$ 0.019 & 0.679 $\pm$ 0.038 & 0.911 $\pm$ 0.005 \\
+ & Yu et al. \cite{yu2020deepacp} & 0.792 & - & 0.849 & 0.704 & 0.920 & 0.780 & 0.878 & 0.829 & 0.662 & - \\
+  & BioAutoML-FAST & \textbf{0.860} $\pm$ 0.006 & 0.855 $\pm$ 0.018 & \textbf{0.860} $\pm$ 0.006 & \textbf{0.723} $\pm$ 0.011 & \textbf{0.926} $\pm$ 0.004 & \textbf{0.839} $\pm$ 0.025 & \textbf{0.841} $\pm$ 0.040 & \textbf{0.840} $\pm$ 0.030 & \textbf{0.681} $\pm$ 0.061 & 0.922 $\pm$ 0.013 \\
 \midrule
 \multirow{2}{=}{Model 3 - anticancer peptides} 
- & Yu et al. \cite{yu2020deepacp} & 0.792 & - & 0.849 & 0.704 & 0.920 & 0.780 & 0.878 & 0.829 & 0.662 & - \\
-  & BioAutoML-FAST & \textbf{0.928} $\pm$ 0.030 & 0.941 $\pm$ 0.037 & \textbf{0.928} $\pm$ 0.030 & \textbf{0.859} $\pm$ 0.058 & \textbf{0.979} $\pm$ 0.008 & - & - & - & - & - \\
+ & Li et al. \cite{li2020prediction} & 0.877 & 0.961 & 0.927 & 0.848 & - & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.913} $\pm$ 0.024 & \textbf{0.932} $\pm$ 0.034 & \textbf{0.913} $\pm$ 0.024 & \textbf{0.829} $\pm$ 0.049 & 0.970 $\pm$ 0.009 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 4 - anticancer peptides (alternative)} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.978} & 0.918 & \textbf{0.946} & \textbf{0.894} & \textbf{0.971} \\
-  & BioAutoML-FAST & 0.922 $\pm$ 0.003 & 0.936 $\pm$ 0.002 & 0.922 $\pm$ 0.003 & 0.845 $\pm$ 0.007 & 0.974 $\pm$ 0.002 & 0.905 $\pm$ 0.007 & \textbf{0.946} $\pm$ 0.006 & 0.926 $\pm$ 0.004 & 0.852 $\pm$ 0.008 & \textbf{0.971} $\pm$ 0.003 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.978 & 0.918 & 0.946 & 0.894 & 0.971 \\
+  & BioAutoML-FAST & 0.922 $\pm$ 0.004 & 0.938 $\pm$ 0.006 & 0.922 $\pm$ 0.004 & 0.844 $\pm$ 0.009 & 0.975 $\pm$ 0.002 & 0.909 $\pm$ 0.006 & \textbf{0.946} $\pm$ 0.014 & 0.928 $\pm$ 0.009 & 0.856 $\pm$ 0.018 & \textbf{0.973} $\pm$ 0.006 \\
 \midrule
 \multirow{2}{=}{Model 5 - anticancer peptides (main)} 
- & Charoenkwan et al. \cite{charoenkwan2021improved} & \textbf{0.777} & \textbf{0.818} & \textbf{0.798} & \textbf{0.596} & \textbf{0.864} & 0.726 & \textbf{0.903} & \textbf{0.825} & \textbf{0.646} & 0.812 \\
-  & BioAutoML-FAST & 0.761 $\pm$ 0.007 & 0.786 $\pm$ 0.013 & 0.761 $\pm$ 0.007 & 0.524 $\pm$ 0.014 & 0.845 $\pm$ 0.006 & \textbf{0.777} $\pm$ 0.010 & 0.756 $\pm$ 0.022 & 0.766 $\pm$ 0.008 & 0.533 $\pm$ 0.015 & \textbf{0.848} $\pm$ 0.006 \\
+ & Charoenkwan et al. \cite{charoenkwan2021improved} & 0.777 & 0.818 & 0.798 & 0.596 & 0.864 & 0.726 & 0.903 & 0.825 & 0.646 & 0.812 \\
+  & BioAutoML-FAST & 0.768 $\pm$ 0.008 & 0.807 $\pm$ 0.003 & 0.768 $\pm$ 0.008 & 0.540 $\pm$ 0.015 & 0.850 $\pm$ 0.004 & \textbf{0.785} $\pm$ 0.007 & 0.759 $\pm$ 0.009 & 0.772 $\pm$ 0.005 & 0.544 $\pm$ 0.010 & \textbf{0.846} $\pm$ 0.003 \\
 \midrule
 \multirow{2}{=}{Model 6 - anti-coronavirus} 
- & Timmons et al. \cite{timmons2021ennavia} & \\textbf{0.916} $\pm$ 0.052 & \\textbf{0.960} $\pm$ 0.020 & \\textbf{0.950} $\pm$ 0.020 & \\textbf{0.870} $\pm$ 0.050 & 0.950 & & & & & \\
-  & BioAutoML-FAST & 0.891 $\pm$ 0.071 & 0.891 $\pm$ 0.104 & 0.891 $\pm$ 0.070 & 0.788 $\pm$ 0.136 & \textbf{0.952} $\pm$ 0.048 & - & - & - & - & - \\
+ & Timmons et al. \cite{timmons2021ennavia} & 0.916 $\pm$ 0.052 & 0.960 $\pm$ 0.020 & 0.950 $\pm$ 0.020 & 0.870 $\pm$ 0.050 & 0.950 & & & & & \\
+  & BioAutoML-FAST & \textbf{0.920} $\pm$ 0.045 & \textbf{0.931} $\pm$ 0.064 & \textbf{0.920} $\pm$ 0.045 & \textbf{0.844} $\pm$ 0.088 & \textbf{0.974} $\pm$ 0.031 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 7 - anti-coronavirus and random non-secretory proteins} 
- & Timmons et al. \cite{timmons2021ennavia} & 0.898 $\pm$ 0.057 & \\textbf{0.988} $\pm$ 0.093 & \\textbf{0.973} $\pm$ 0.013 & \\textbf{0.910} $\pm$ 0.030 & 0.950 & & & & & \\
-  & BioAutoML-FAST & \textbf{0.937} $\pm$ 0.072 & 0.944 $\pm$ 0.086 & 0.937 $\pm$ 0.073 & 0.878 $\pm$ 0.139 & \textbf{0.982} $\pm$ 0.032 & - & - & - & - & - \\
+ & Timmons et al. \cite{timmons2021ennavia} & 0.898 $\pm$ 0.057 & 0.988 $\pm$ 0.093 & 0.973 $\pm$ 0.013 & 0.910 $\pm$ 0.030 & 0.950 & & & & & \\
+  & BioAutoML-FAST & \textbf{0.938} $\pm$ 0.074 & \textbf{0.949} $\pm$ 0.081 & \textbf{0.938} $\pm$ 0.073 & \textbf{0.877} $\pm$ 0.146 & \textbf{0.979} $\pm$ 0.040 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 8 - antifungal peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{1.000} & 0.904 & \textbf{0.948} & \textbf{0.902} & \textbf{0.994} \\
-  & BioAutoML-FAST & 0.954 $\pm$ 0.003 & 0.971 $\pm$ 0.002 & 0.954 $\pm$ 0.003 & 0.908 $\pm$ 0.005 & 0.988 $\pm$ 0.001 & 0.938 $\pm$ 0.006 & \textbf{0.954} $\pm$ 0.008 & 0.946 $\pm$ 0.004 & 0.892 $\pm$ 0.008 & 0.991 $\pm$ 0.000 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 1.000 & 0.904 & 0.948 & 0.902 & 0.994 \\
+  & BioAutoML-FAST & 0.951 $\pm$ 0.004 & 0.969 $\pm$ 0.004 & 0.951 $\pm$ 0.004 & 0.904 $\pm$ 0.007 & 0.988 $\pm$ 0.001 & 0.939 $\pm$ 0.006 & \textbf{0.956} $\pm$ 0.009 & \textbf{0.947} $\pm$ 0.004 & \textbf{0.895} $\pm$ 0.007 & 0.988 $\pm$ 0.001 \\
 \midrule
 \multirow{2}{=}{Model 9 - anti-hypertensive peptides} 
- & Manavalan et al. \cite{manavalan2019mahtpred} & \textbf{0.821} & \textbf{0.874} & \textbf{0.848} & \textbf{0.697} & \textbf{0.903} & \textbf{0.894} & \textbf{0.873} & \textbf{0.883} & \textbf{0.767} & \textbf{0.951} \\
-  & BioAutoML-FAST & 0.802 $\pm$ 0.004 & 0.825 $\pm$ 0.011 & 0.802 $\pm$ 0.004 & 0.605 $\pm$ 0.008 & 0.874 $\pm$ 0.005 & 0.875 $\pm$ 0.013 & 0.829 $\pm$ 0.011 & 0.852 $\pm$ 0.004 & 0.705 $\pm$ 0.008 & 0.925 $\pm$ 0.004 \\
+ & Manavalan et al. \cite{manavalan2019mahtpred} & 0.821 & 0.874 & 0.848 & 0.697 & 0.903 & 0.894 & 0.873 & 0.883 & 0.767 & 0.951 \\
+  & BioAutoML-FAST & 0.805 $\pm$ 0.007 & 0.821 $\pm$ 0.008 & 0.805 $\pm$ 0.007 & 0.611 $\pm$ 0.015 & 0.879 $\pm$ 0.008 & 0.878 $\pm$ 0.007 & 0.824 $\pm$ 0.014 & 0.851 $\pm$ 0.010 & 0.703 $\pm$ 0.020 & 0.924 $\pm$ 0.006 \\
 \midrule
-\multirow{2}{=}{Model 10 - antimalarial peptides (alternative)} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.985} & \textbf{1.000} & \textbf{0.989} & \textbf{0.957} & 0.987 \\
-  & BioAutoML-FAST & 0.984 $\pm$ 0.004 & 0.989 $\pm$ 0.014 & 0.984 $\pm$ 0.004 & 0.968 $\pm$ 0.008 & 0.997 $\pm$ 0.002 & 0.936 $\pm$ 0.089 & 0.991 $\pm$ 0.003 & 0.982 $\pm$ 0.017 & 0.934 $\pm$ 0.063 & \textbf{0.992} $\pm$ 0.015 \\
+\multirow{2}{=}{Model 10 - antimalarial peptides} 
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.985 & 1.000 & 0.989 & 0.957 & 0.987 \\
+  & BioAutoML-FAST & 0.983 $\pm$ 0.003 & 0.985 $\pm$ 0.011 & 0.983 $\pm$ 0.003 & 0.966 $\pm$ 0.005 & 0.998 $\pm$ 0.002 & \textbf{0.907} $\pm$ 0.128 & 0.991 $\pm$ 0.003 & \textbf{0.977} $\pm$ 0.024 & \textbf{0.915} $\pm$ 0.087 & \textbf{0.989} $\pm$ 0.016 \\
 \midrule
-\multirow{2}{=}{Model 11 - antimalarial peptides (main)} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{1.000} & 0.979 & 0.980 & 0.815 & 0.921 \\
-  & BioAutoML-FAST & 0.962 $\pm$ 0.069 & 0.972 $\pm$ 0.055 & 0.962 $\pm$ 0.069 & 0.925 $\pm$ 0.135 & 0.979 $\pm$ 0.043 & 0.957 $\pm$ 0.096 & \textbf{0.985} $\pm$ 0.027 & \textbf{0.983} $\pm$ 0.031 & \textbf{0.890} $\pm$ 0.185 & \textbf{0.995} $\pm$ 0.012 \\
+\multirow{2}{=}{Model 11 - antimalarial peptides} 
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 1.000 & 0.979 & 0.980 & 0.815 & 0.921 \\
+  & BioAutoML-FAST & 0.992 $\pm$ 0.001 & 0.998 $\pm$ 0.001 & 0.992 $\pm$ 0.001 & 0.985 $\pm$ 0.002 & 0.998 $\pm$ 0.001 & \textbf{1.000} $\pm$ 0.000 & \textbf{0.997} $\pm$ 0.001 & \textbf{0.997} $\pm$ 0.001 & \textbf{0.974} $\pm$ 0.010 & \textbf{1.000} $\pm$ 0.000 \\
 \midrule
 \multirow{2}{=}{Model 12 - antimicrobial peptides} 
- & Chung et al. \cite{chung2020characterization} & - & - & - & - & \textbf{0.992} & - & - & - & - & \textbf{0.990} \\
-  & BioAutoML-FAST & 0.960 $\pm$ 0.002 & 0.955 $\pm$ 0.003 & 0.960 $\pm$ 0.002 & 0.921 $\pm$ 0.004 & \textbf{0.992} $\pm$ 0.000 & 0.957 $\pm$ 0.005 & 0.956 $\pm$ 0.002 & 0.956 $\pm$ 0.002 & 0.791 $\pm$ 0.008 & 0.989 $\pm$ 0.000 \\
+ & Chung et al. \cite{chung2020characterization} & - & - & - & - & 0.992 & - & - & - & - & 0.990 \\
+  & BioAutoML-FAST & 0.968 $\pm$ 0.014 & 0.962 $\pm$ 0.017 & 0.968 $\pm$ 0.014 & 0.936 $\pm$ 0.028 & \textbf{0.994} $\pm$ 0.003 & 0.938 $\pm$ 0.039 & 0.964 $\pm$ 0.017 & 0.961 $\pm$ 0.012 & 0.812 $\pm$ 0.047 & \textbf{0.990} $\pm$ 0.001 \\
 \midrule
 \multirow{2}{=}{Model 13 - antimicrobial peptides} 
- & Xiao et al. \cite{xiao2021iamp} & \textbf{0.946} & 0.916 & 0.931 & 0.8620 & - & \textbf{0.975} & \textbf{0.941} & \textbf{0.961} & \textbf{0.919} & - \\
-  & BioAutoML-FAST & \textbf{0.946} $\pm$ 0.023 & \textbf{0.934} $\pm$ 0.028 & \textbf{0.946} $\pm$ 0.023 & \textbf{0.892} $\pm$ 0.045 & 0.987 $\pm$ 0.011 & \textbf{0.975} $\pm$ 0.007 & 0.890 $\pm$ 0.007 & 0.932 $\pm$ 0.003 & 0.868 $\pm$ 0.007 & 0.975 $\pm$ 0.008 \\
+ & Xiao et al. \cite{xiao2021iamp} & 0.946 & 0.916 & 0.931 & 0.8620 & - & 0.975 & 0.941 & 0.961 & 0.919 & - \\
+  & BioAutoML-FAST & \textbf{0.957} $\pm$ 0.001 & \textbf{0.949} $\pm$ 0.001 & \textbf{0.957} $\pm$ 0.001 & \textbf{0.915} $\pm$ 0.002 & 0.993 $\pm$ 0.000 & \textbf{0.972} $\pm$ 0.003 & 0.891 $\pm$ 0.001 & 0.932 $\pm$ 0.002 & 0.866 $\pm$ 0.004 & 0.969 $\pm$ 0.002 \\
 \midrule
 \multirow{2}{=}{Model 14 - antimicrobial peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.968} & 0.948 & 0.962 & 0.908 & 0.991 \\
-  & BioAutoML-FAST & 0.968 $\pm$ 0.009 & 0.967 $\pm$ 0.009 & 0.968 $\pm$ 0.009 & 0.937 $\pm$ 0.019 & 0.995 $\pm$ 0.002 & 0.955 $\pm$ 0.009 & \textbf{0.967} $\pm$ 0.010 & \textbf{0.964} $\pm$ 0.004 & \textbf{0.913} $\pm$ 0.010 & \textbf{0.993} $\pm$ 0.001 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.968 & 0.948 & 0.962 & 0.908 & 0.991 \\
+  & BioAutoML-FAST & 0.973 $\pm$ 0.011 & 0.972 $\pm$ 0.011 & 0.973 $\pm$ 0.011 & 0.946 $\pm$ 0.022 & 0.996 $\pm$ 0.003 & 0.950 $\pm$ 0.014 & \textbf{0.973} $\pm$ 0.012 & \textbf{0.966} $\pm$ 0.004 & \textbf{0.918} $\pm$ 0.009 & \textbf{0.993} $\pm$ 0.001 \\
 \midrule
 \multirow{2}{=}{Model 15 - anti-MRSA strains peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.994} & \textbf{1.000} & \textbf{0.994} & \textbf{0.980} & \textbf{0.999} \\
-  & BioAutoML-FAST & 0.941 $\pm$ 0.056 & 0.931 $\pm$ 0.073 & 0.941 $\pm$ 0.056 & 0.884 $\pm$ 0.109 & 0.978 $\pm$ 0.027 & 0.927 $\pm$ 0.060 & 0.956 $\pm$ 0.042 & 0.952 $\pm$ 0.032 & 0.839 $\pm$ 0.088 & 0.994 $\pm$ 0.004 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.994 & 1.000 & 0.994 & 0.980 & 0.999 \\
+  & BioAutoML-FAST & 0.935 $\pm$ 0.067 & 0.932 $\pm$ 0.077 & 0.935 $\pm$ 0.067 & 0.873 $\pm$ 0.130 & 0.980 $\pm$ 0.025 & 0.893 $\pm$ 0.086 & \textbf{0.956} $\pm$ 0.050 & 0.947 $\pm$ 0.035 & 0.822 $\pm$ 0.083 & 0.992 $\pm$ 0.006 \\
 \midrule
 \multirow{2}{=}{Model 16 - antioxidant proteins} 
- & Lam et al. \cite{ho2020machine} & \textbf{0.815} & \textbf{0.851} & \textbf{0.846} & - & - & 0.946 & \textbf{0.941} & \textbf{0.942} & \textbf{0.811} & \textbf{0.981} \\
-  & BioAutoML-FAST & 0.813 $\pm$ 0.014 & 0.814 $\pm$ 0.028 & 0.813 $\pm$ 0.014 & 0.631 $\pm$ 0.029 & 0.891 $\pm$ 0.008 & \textbf{0.992} $\pm$ 0.007 & 0.481 $\pm$ 0.043 & 0.562 $\pm$ 0.037 & 0.352 $\pm$ 0.030 & 0.957 $\pm$ 0.012 \\
+ & Lam et al. \cite{ho2020machine} & 0.815 & 0.851 & 0.846 & - & - & 0.946 & 0.941 & 0.942 & 0.811 & 0.981 \\
+  & BioAutoML-FAST & \textbf{0.815} $\pm$ 0.010 & 0.821 $\pm$ 0.013 & 0.815 $\pm$ 0.010 & 0.637 $\pm$ 0.021 & 0.898 $\pm$ 0.009 & \textbf{0.986} $\pm$ 0.000 & 0.490 $\pm$ 0.033 & 0.569 $\pm$ 0.028 & 0.354 $\pm$ 0.021 & 0.961 $\pm$ 0.003 \\
 \midrule
 \multirow{2}{=}{Model 17 - anti-parasitic peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.821} & \textbf{1.000} & \textbf{0.891} & \textbf{0.800} & \textbf{0.940} \\
-  & BioAutoML-FAST & 0.906 $\pm$ 0.061 & 0.889 $\pm$ 0.078 & 0.906 $\pm$ 0.061 & 0.816 $\pm$ 0.120 & 0.964 $\pm$ 0.031 & 0.709 $\pm$ 0.184 & 0.878 $\pm$ 0.073 & 0.793 $\pm$ 0.056 & 0.609 $\pm$ 0.084 & 0.927 $\pm$ 0.010 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.821 & 1.000 & 0.891 & 0.800 & 0.940 \\
+  & BioAutoML-FAST & 0.897 $\pm$ 0.044 & 0.865 $\pm$ 0.062 & 0.897 $\pm$ 0.044 & 0.800 $\pm$ 0.085 & 0.954 $\pm$ 0.025 & \textbf{0.743} $\pm$ 0.089 & 0.843 $\pm$ 0.056 & 0.793 $\pm$ 0.023 & 0.594 $\pm$ 0.035 & 0.913 $\pm$ 0.020 \\
 \midrule
 \multirow{2}{=}{Model 18 - antiviral} 
- & Timmons et al. \cite{timmons2021ennavia} & \\textbf{0.906} $\pm$ 0.025 & \\textbf{0.919} $\pm$ 0.028 & \\textbf{0.913} $\pm$ 0.019 & \\textbf{0.820} $\pm$ 0.040 & 0.930 & \\textbf{0.947} $\pm$ 0.06 & \\textbf{0.927} $\pm$ 0.08 & \\textbf{0.939} $\pm$ 0.048 & \\textbf{0.870} $\pm$ 0.100 & 0.930 \\
-  & BioAutoML-FAST & 0.885 $\pm$ 0.013 & 0.906 $\pm$ 0.015 & 0.885 $\pm$ 0.014 & 0.771 $\pm$ 0.027 & \textbf{0.946} $\pm$ 0.016 & 0.926 $\pm$ 0.015 & 0.810 $\pm$ 0.011 & 0.878 $\pm$ 0.010 & 0.748 $\pm$ 0.022 & \textbf{0.951} $\pm$ 0.005 \\
+ & Timmons et al. \cite{timmons2021ennavia} & 0.906 $\pm$ 0.025 & 0.919 $\pm$ 0.028 & 0.913 $\pm$ 0.019 & 0.820 $\pm$ 0.040 & 0.930 & 0.947 $\pm$ 0.06 & 0.927 $\pm$ 0.08 & 0.939 $\pm$ 0.048 & 0.870 $\pm$ 0.100 & 0.930 \\
+  & BioAutoML-FAST & \textbf{0.886} $\pm$ 0.022 & \textbf{0.901} $\pm$ 0.029 & 0.886 $\pm$ 0.022 & 0.774 $\pm$ 0.044 & \textbf{0.947} $\pm$ 0.017 & 0.916 $\pm$ 0.015 & 0.800 $\pm$ 0.011 & 0.867 $\pm$ 0.007 & 0.726 $\pm$ 0.015 & \textbf{0.944} $\pm$ 0.009 \\
 \midrule
 \multirow{2}{=}{Model 19 - antiviral and random non-secretory proteins} 
- & Timmons et al. \cite{timmons2021ennavia} & \\textbf{0.934} $\pm$ 0.021 & \\textbf{0.984} $\pm$ 0.011 & \\textbf{0.959} $\pm$ 0.012 & \\textbf{0.920} $\pm$ 0.020 & \textbf{0.980} & \\textbf{0.930} $\pm$ 0.066 & \\textbf{0.983} $\pm$ 0.034 & \\textbf{0.957} $\pm$ 0.037 & \\textbf{0.910} $\pm$ 0.070 & \textbf{0.980} \\
-  & BioAutoML-FAST & 0.922 $\pm$ 0.009 & 0.941 $\pm$ 0.017 & 0.922 $\pm$ 0.009 & 0.845 $\pm$ 0.017 & 0.972 $\pm$ 0.002 & 0.902 $\pm$ 0.036 & 0.934 $\pm$ 0.014 & 0.918 $\pm$ 0.021 & 0.837 $\pm$ 0.041 & 0.965 $\pm$ 0.003 \\
+ & Timmons et al. \cite{timmons2021ennavia} & 0.934 $\pm$ 0.021 & 0.984 $\pm$ 0.011 & 0.959 $\pm$ 0.012 & 0.920 $\pm$ 0.020 & 0.980 & 0.930 $\pm$ 0.066 & 0.983 $\pm$ 0.034 & 0.957 $\pm$ 0.037 & 0.910 $\pm$ 0.070 & 0.980 \\
+  & BioAutoML-FAST & 0.925 $\pm$ 0.004 & 0.948 $\pm$ 0.007 & 0.925 $\pm$ 0.004 & 0.852 $\pm$ 0.007 & 0.973 $\pm$ 0.001 & 0.881 $\pm$ 0.019 & 0.924 $\pm$ 0.009 & 0.903 $\pm$ 0.011 & 0.806 $\pm$ 0.022 & 0.968 $\pm$ 0.002 \\
 \midrule
 \multirow{2}{=}{Model 20 - antiviral peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.916} & 0.790 & 0.842 & 0.694 & 0.907 \\
-  & BioAutoML-FAST & 0.894 $\pm$ 0.003 & 0.916 $\pm$ 0.003 & 0.894 $\pm$ 0.003 & 0.789 $\pm$ 0.005 & 0.956 $\pm$ 0.001 & 0.848 $\pm$ 0.004 & \textbf{0.913} $\pm$ 0.002 & \textbf{0.881} $\pm$ 0.002 & \textbf{0.763} $\pm$ 0.003 & \textbf{0.945} $\pm$ 0.002 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.916 & 0.790 & 0.842 & 0.694 & 0.907 \\
+  & BioAutoML-FAST & 0.894 $\pm$ 0.002 & 0.916 $\pm$ 0.004 & 0.894 $\pm$ 0.002 & 0.789 $\pm$ 0.003 & 0.957 $\pm$ 0.001 & 0.855 $\pm$ 0.003 & \textbf{0.914} $\pm$ 0.006 & \textbf{0.884} $\pm$ 0.003 & \textbf{0.770} $\pm$ 0.007 & \textbf{0.948} $\pm$ 0.002 \\
 \midrule
 \multirow{2}{=}{Model 21 - bitter peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.924} & \textbf{0.952} & \textbf{0.938} & \textbf{0.875} & \textbf{0.982} \\
-  & BioAutoML-FAST & 0.843 $\pm$ 0.014 & 0.855 $\pm$ 0.021 & 0.843 $\pm$ 0.013 & 0.690 $\pm$ 0.026 & 0.917 $\pm$ 0.011 & 0.912 $\pm$ 0.026 & 0.916 $\pm$ 0.024 & 0.914 $\pm$ 0.015 & 0.829 $\pm$ 0.029 & 0.968 $\pm$ 0.009 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.924 & 0.952 & 0.938 & 0.875 & 0.982 \\
+  & BioAutoML-FAST & 0.847 $\pm$ 0.009 & 0.856 $\pm$ 0.017 & 0.847 $\pm$ 0.010 & 0.698 $\pm$ 0.017 & 0.916 $\pm$ 0.003 & \textbf{0.928} $\pm$ 0.018 & 0.919 $\pm$ 0.020 & 0.923 $\pm$ 0.003 & 0.847 $\pm$ 0.007 & 0.973 $\pm$ 0.003 \\
 \midrule
-\multirow{2}{=}{Model 22 - blood–brain barrier	peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.882} & 0.809 & \textbf{0.842} & \textbf{0.688} & \textbf{0.992} \\
-  & BioAutoML-FAST & 0.693 $\pm$ 0.012 & 0.720 $\pm$ 0.029 & 0.693 $\pm$ 0.012 & 0.392 $\pm$ 0.024 & 0.768 $\pm$ 0.027 & 0.632 $\pm$ 0.064 & \textbf{0.863} $\pm$ 0.060 & 0.747 $\pm$ 0.051 & 0.510 $\pm$ 0.105 & 0.847 $\pm$ 0.044 \\
+\multirow{2}{=}{Model 22 - blood–brain barrier peptides} 
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.882 & 0.809 & 0.842 & 0.688 & 0.992 \\
+  & BioAutoML-FAST & 0.706 $\pm$ 0.025 & 0.736 $\pm$ 0.028 & 0.706 $\pm$ 0.025 & 0.419 $\pm$ 0.052 & 0.772 $\pm$ 0.012 & 0.611 $\pm$ 0.047 & \textbf{0.832} $\pm$ 0.069 & 0.721 $\pm$ 0.035 & 0.456 $\pm$ 0.080 & 0.825 $\pm$ 0.038 \\
 \midrule
 \multirow{2}{=}{Model 23 - DNA-binding proteins} 
- & Chowdhury et al. \cite{chowdhury2017idnaprot} & \textbf{0.895} & \textbf{0.883} & \textbf{0.889} & \textbf{0.779} & \textbf{0.939} & 0.813 & \textbf{0.800} & \textbf{0.806} & 0.613 & 0.843 \\
-  & BioAutoML-FAST & 0.747 $\pm$ 0.009 & 0.734 $\pm$ 0.007 & 0.747 $\pm$ 0.009 & 0.496 $\pm$ 0.019 & 0.824 $\pm$ 0.009 & \textbf{0.966} $\pm$ 0.012 & 0.618 $\pm$ 0.022 & 0.795 $\pm$ 0.013 & \textbf{0.625} $\pm$ 0.024 & \textbf{0.956} $\pm$ 0.008 \\
+ & Chowdhury et al. \cite{chowdhury2017idnaprot} & 0.895 & 0.883 & 0.889 & 0.779 & 0.939 & 0.813 & 0.800 & 0.806 & 0.613 & 0.843 \\
+  & BioAutoML-FAST & 0.751 $\pm$ 0.007 & 0.738 $\pm$ 0.007 & 0.751 $\pm$ 0.007 & 0.504 $\pm$ 0.013 & 0.834 $\pm$ 0.006 & \textbf{0.970} $\pm$ 0.009 & 0.633 $\pm$ 0.032 & \textbf{0.804} $\pm$ 0.019 & \textbf{0.643} $\pm$ 0.034 & \textbf{0.963} $\pm$ 0.002 \\
 \midrule
 \multirow{2}{=}{Model 24 - DNA-binding proteins} 
  & Li et al. \cite{li2021bioseq} & 0.802 & 0.829 & 0.816 & 0.632 & 0.904 & - & - & - & - & - \\
-  & BioAutoML-FAST & \textbf{0.861} $\pm$ 0.064 & \textbf{0.864} $\pm$ 0.058 & \textbf{0.861} $\pm$ 0.064 & \textbf{0.725} $\pm$ 0.129 & \textbf{0.932} $\pm$ 0.053 & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.883} $\pm$ 0.012 & \textbf{0.882} $\pm$ 0.013 & \textbf{0.883} $\pm$ 0.012 & \textbf{0.767} $\pm$ 0.023 & \textbf{0.952} $\pm$ 0.009 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 25 - DNase I hypersensitive sites} 
- & Liu et al. \cite{liu2016idhs} & 0.646 & \textbf{0.943} & \textbf{0.861} & 0.636 & - & - & - & - & - & - \\
-  & BioAutoML-FAST & \textbf{0.858} $\pm$ 0.064 & 0.903 $\pm$ 0.035 & 0.858 $\pm$ 0.064 & \textbf{0.722} $\pm$ 0.124 & 0.909 $\pm$ 0.076 & - & - & - & - & - \\
+ & Liu et al. \cite{liu2016idhs} & 0.646 & 0.943 & 0.861 & 0.636 & - & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.866} $\pm$ 0.066 & \textbf{0.907} $\pm$ 0.040 & \textbf{0.866} $\pm$ 0.066 & \textbf{0.737} $\pm$ 0.127 & 0.914 $\pm$ 0.072 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 26 - DPP IV inhibitory peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.861} & 0.846 & 0.853 & 0.707 & 0.938 \\
-  & BioAutoML-FAST & 0.879 $\pm$ 0.002 & 0.871 $\pm$ 0.008 & 0.879 $\pm$ 0.002 & 0.759 $\pm$ 0.005 & 0.954 $\pm$ 0.002 & 0.856 $\pm$ 0.019 & \textbf{0.872} $\pm$ 0.005 & \textbf{0.864} $\pm$ 0.011 & \textbf{0.728} $\pm$ 0.023 & \textbf{0.949} $\pm$ 0.004 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.861 & 0.846 & 0.853 & 0.707 & 0.938 \\
+  & BioAutoML-FAST & 0.876 $\pm$ 0.003 & 0.875 $\pm$ 0.007 & 0.876 $\pm$ 0.003 & 0.754 $\pm$ 0.006 & 0.956 $\pm$ 0.001 & 0.833 $\pm$ 0.016 & \textbf{0.878} $\pm$ 0.010 & \textbf{0.856} $\pm$ 0.013 & \textbf{0.712} $\pm$ 0.025 & \textbf{0.951} $\pm$ 0.003 \\
 \midrule
 \multirow{2}{=}{Model 27 - hemolytic peptides} 
- & Chaudhary et al. \cite{chaudhary2016web} & \textbf{0.960} & 0.946 & 0.953 & 0.910 & - & \textbf{0.964} & \textbf{0.991} & 0.964 & 0.930 & - \\
-  & BioAutoML-FAST & 0.959 $\pm$ 0.002 & \textbf{0.968} $\pm$ 0.003 & \textbf{0.959} $\pm$ 0.002 & \textbf{0.919} $\pm$ 0.004 & 0.993 $\pm$ 0.002 & 0.962 $\pm$ 0.012 & 0.978 $\pm$ 0.010 & \textbf{0.970} $\pm$ 0.011 & \textbf{0.940} $\pm$ 0.022 & 0.997 $\pm$ 0.002 \\
+ & Chaudhary et al. \cite{chaudhary2016web} & 0.960 & 0.946 & 0.953 & 0.910 & - & 0.964 & 0.991 & 0.964 & 0.930 & - \\
+  & BioAutoML-FAST & \textbf{0.964} $\pm$ 0.004 & \textbf{0.971} $\pm$ 0.009 & \textbf{0.964} $\pm$ 0.004 & \textbf{0.928} $\pm$ 0.008 & 0.994 $\pm$ 0.001 & 0.955 $\pm$ 0.006 & \textbf{0.984} $\pm$ 0.008 & \textbf{0.969} $\pm$ 0.006 & \textbf{0.939} $\pm$ 0.012 & 0.997 $\pm$ 0.001 \\
 \midrule
-\multirow{2}{=}{Model 28 - identification of hotspots} 
- & Khan et al. \cite{khan2020prediction} & \textbf{0.962} & \textbf{0.959} & \textbf{0.958} & \textbf{0.916} & \textbf{0.965} & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.643 $\pm$ 0.027 & 0.650 $\pm$ 0.026 & 0.643 $\pm$ 0.027 & 0.287 $\pm$ 0.054 & 0.703 $\pm$ 0.033 & - & - & - & - & - \\
+\multirow{2}{=}{Model 28 - recombination spots} 
+ & Khan et al. \cite{khan2020prediction} & 0.962 & 0.959 & 0.958 & 0.916 & 0.965 & - & - & - & - & - \\
+  & BioAutoML-FAST & 0.628 $\pm$ 0.035 & 0.640 $\pm$ 0.040 & 0.628 $\pm$ 0.034 & 0.257 $\pm$ 0.069 & 0.676 $\pm$ 0.048 & - & - & - & - & - \\
 \midrule
-\multirow{2}{=}{Model 29 - lncRNA (Homo sapiens)} 
- & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & \textbf{0.966} & 0.980 & \textbf{0.973} & - & 0.993 \\
-  & BioAutoML-FAST & 0.967 $\pm$ 0.001 & 0.975 $\pm$ 0.001 & 0.967 $\pm$ 0.001 & 0.934 $\pm$ 0.001 & 0.995 $\pm$ 0.000 & 0.959 $\pm$ 0.002 & \textbf{0.981} $\pm$ 0.001 & 0.970 $\pm$ 0.001 & 0.941 $\pm$ 0.003 & \textbf{0.997} $\pm$ 0.000 \\
+\multirow{2}{=}{Model 29 - lncRNA (\textit{Homo sapiens})} 
+ & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & 0.966 & 0.980 & 0.973 & - & 0.993 \\
+  & BioAutoML-FAST & 0.967 $\pm$ 0.001 & 0.975 $\pm$ 0.001 & 0.967 $\pm$ 0.001 & 0.934 $\pm$ 0.001 & 0.995 $\pm$ 0.000 & 0.961 $\pm$ 0.002 & \textbf{0.982} $\pm$ 0.002 & \textbf{0.971} $\pm$ 0.002 & 0.943 $\pm$ 0.004 & \textbf{0.997} $\pm$ 0.000 \\
 \midrule
-\multirow{2}{=}{Model 30 - lncRNA (Mus musculus)} 
- & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & \textbf{0.954} & \textbf{0.915} & \textbf{0.935} & - & \textbf{0.973} \\
-  & BioAutoML-FAST & 0.906 $\pm$ 0.002 & 0.879 $\pm$ 0.003 & 0.906 $\pm$ 0.002 & 0.814 $\pm$ 0.004 & 0.963 $\pm$ 0.001 & 0.930 $\pm$ 0.004 & 0.893 $\pm$ 0.001 & 0.912 $\pm$ 0.002 & 0.824 $\pm$ 0.004 & 0.969 $\pm$ 0.001 \\
+\multirow{2}{=}{Model 30 - lncRNA (\textit{Mus musculus})} 
+ & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & 0.954 & 0.915 & 0.935 & - & 0.973 \\
+  & BioAutoML-FAST & 0.908 $\pm$ 0.002 & 0.880 $\pm$ 0.003 & 0.908 $\pm$ 0.002 & 0.817 $\pm$ 0.004 & 0.964 $\pm$ 0.001 & 0.932 $\pm$ 0.004 & 0.895 $\pm$ 0.001 & 0.913 $\pm$ 0.002 & 0.827 $\pm$ 0.005 & 0.969 $\pm$ 0.001 \\
 \midrule
-\multirow{2}{=}{Model 31 - lncRNA (Triticum aestivum)} 
- & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & \textbf{0.952} & \textbf{0.905} & \textbf{0.928} & - & 0.963 \\
-  & BioAutoML-FAST & 0.915 $\pm$ 0.003 & 0.888 $\pm$ 0.002 & 0.915 $\pm$ 0.003 & 0.831 $\pm$ 0.005 & 0.970 $\pm$ 0.001 & 0.922 $\pm$ 0.007 & 0.883 $\pm$ 0.002 & 0.903 $\pm$ 0.004 & 0.806 $\pm$ 0.008 & \textbf{0.964} $\pm$ 0.002 \\
+\multirow{2}{=}{Model 31 - lncRNA (\textit{Triticum aestivum})} 
+ & Han et al. \cite{han2019lncfinder} & - & - & - & - & - & 0.952 & 0.905 & 0.928 & - & 0.963 \\
+  & BioAutoML-FAST & 0.913 $\pm$ 0.002 & 0.889 $\pm$ 0.002 & 0.913 $\pm$ 0.002 & 0.827 $\pm$ 0.005 & 0.968 $\pm$ 0.001 & 0.923 $\pm$ 0.004 & 0.884 $\pm$ 0.003 & 0.903 $\pm$ 0.003 & 0.807 $\pm$ 0.006 & \textbf{0.964} $\pm$ 0.002 \\
 \midrule
-\multirow{2}{=}{Model 32 - lncRNA (Zea mays)} 
- & Meng et al. \cite{meng2021plncrna} & \textbf{0.979} & - & 0.965 & - & 0.993 & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.972 $\pm$ 0.000 & 0.956 $\pm$ 0.001 & \textbf{0.972} $\pm$ 0.000 & 0.945 $\pm$ 0.001 & \textbf{0.997} $\pm$ 0.000 & - & - & - & - & - \\
+\multirow{2}{=}{Model 32 - lncRNA (\textit{Zea mays})} 
+ & Meng et al. \cite{meng2021plncrna} & 0.979 & - & 0.965 & - & 0.993 & - & - & - & - & - \\
+  & BioAutoML-FAST & 0.973 $\pm$ 0.000 & 0.956 $\pm$ 0.000 & \textbf{0.973} $\pm$ 0.000 & 0.946 $\pm$ 0.000 & \textbf{0.997} $\pm$ 0.000 & - & - & - & - & - \\
 \midrule
-\multirow{2}{=}{Model 33 - m5C sites (Arabidopsis thaliana)} 
- & Lv et al. \cite{lv2020evaluation} & 0.657 & \textbf{0.757} & \textbf{0.707} & \textbf{0.416} & \textbf{0.765} & \textbf{0.724} & \textbf{0.756} & \textbf{0.740} & \textbf{0.480} & - \\
-  & BioAutoML-FAST & \textbf{0.693} $\pm$ 0.006 & 0.748 $\pm$ 0.019 & 0.693 $\pm$ 0.006 & 0.389 $\pm$ 0.013 & 0.751 $\pm$ 0.007 & 0.717 $\pm$ 0.005 & 0.753 $\pm$ 0.014 & 0.735 $\pm$ 0.007 & 0.470 $\pm$ 0.015 & 0.805 $\pm$ 0.008 \\
+\multirow{2}{=}{Model 33 - m5C sites (\textit{Arabidopsis thaliana})} 
+ & Lv et al. \cite{lv2020evaluation} & 0.657 & 0.757 & 0.707 & 0.416 & 0.765 & 0.724 & 0.756 & 0.740 & 0.480 & - \\
+  & BioAutoML-FAST & \textbf{0.696} $\pm$ 0.005 & \textbf{0.757} $\pm$ 0.018 & 0.696 $\pm$ 0.005 & 0.396 $\pm$ 0.010 & 0.756 $\pm$ 0.005 & \textbf{0.717} $\pm$ 0.008 & \textbf{0.760} $\pm$ 0.016 & \textbf{0.739} $\pm$ 0.005 & \textbf{0.478} $\pm$ 0.011 & 0.808 $\pm$ 0.005 \\
 \midrule
-\multirow{2}{=}{Model 34 - m5C sites (Homo sapiens)} 
- & Lv et al. \cite{lv2020evaluation} & \textbf{0.900} & \textbf{0.917} & \textbf{0.908} & \textbf{0.817} & \textbf{0.963} & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.898 $\pm$ 0.013 & 0.908 $\pm$ 0.021 & 0.898 $\pm$ 0.013 & 0.802 $\pm$ 0.027 & 0.956 $\pm$ 0.007 & - & - & - & - & - \\
+\multirow{2}{=}{Model 34 - m5C sites (\textit{Homo sapiens})} 
+ & Lv et al. \cite{lv2020evaluation} & 0.900 & 0.917 & 0.908 & 0.817 & 0.963 & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.900} $\pm$ 0.011 & \textbf{0.925} $\pm$ 0.010 & \textbf{0.900} $\pm$ 0.011 & \textbf{0.805} $\pm$ 0.021 & \textbf{0.957} $\pm$ 0.011 & - & - & - & - & - \\
 \midrule
-\multirow{2}{=}{Model 35 - m5C sites (Mus musculus)} 
- & Lv et al. \cite{lv2020evaluation} & \textbf{1.000} & \textbf{1.000} & \textbf{1.000} & \textbf{1.000} & \textbf{1.000} & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.998 $\pm$ 0.003 & 0.996 $\pm$ 0.006 & 0.998 $\pm$ 0.003 & 0.996 $\pm$ 0.005 & \textbf{1.000} $\pm$ 0.000 & - & - & - & - & - \\
+\multirow{2}{=}{Model 35 - m5C sites (\textit{Mus musculus})} 
+ & Lv et al. \cite{lv2020evaluation} & 1.000 & 1.000 & 1.000 & 1.000 & 1.000 & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.994} $\pm$ 0.009 & \textbf{0.998} $\pm$ 0.004 & \textbf{0.994} $\pm$ 0.009 & \textbf{0.989} $\pm$ 0.017 & \textbf{1.000} $\pm$ 0.000 & - & - & - & - & - \\
 \midrule
-\multirow{2}{=}{Model 36 - m5C sites (Saccharomyces cerevisiae)} 
- & Lv et al. \cite{lv2020evaluation} & \textbf{1.000} & \textbf{1.000} & \textbf{1.000} & \textbf{1.000} & \textbf{1.000} & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.998 $\pm$ 0.002 & 0.998 $\pm$ 0.004 & 0.998 $\pm$ 0.002 & 0.996 $\pm$ 0.004 & \textbf{1.000} $\pm$ 0.000 & - & - & - & - & - \\
+\multirow{2}{=}{Model 36 - m5C sites (\textit{Saccharomyces cerevisiae})} 
+ & Lv et al. \cite{lv2020evaluation} & 1.000 & 1.000 & 1.000 & 1.000 & 1.000 & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.999} $\pm$ 0.002 & \textbf{0.999} $\pm$ 0.002 & \textbf{0.999} $\pm$ 0.002 & \textbf{0.998} $\pm$ 0.004 & \textbf{1.000} $\pm$ 0.000 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 37 - neuropeptides} 
- & Chen et al. \cite{chen2022neuropred} & \textbf{0.940} & \textbf{0.953} & \textbf{0.947} & \textbf{0.894} & \textbf{0.984} & \textbf{0.897} & \textbf{0.975} & \textbf{0.936} & \textbf{0.875} & \textbf{0.988} \\
-  & BioAutoML-FAST & 0.907 $\pm$ 0.003 & 0.916 $\pm$ 0.002 & 0.907 $\pm$ 0.003 & 0.815 $\pm$ 0.005 & 0.965 $\pm$ 0.001 & 0.885 $\pm$ 0.006 & 0.937 $\pm$ 0.005 & 0.911 $\pm$ 0.003 & 0.823 $\pm$ 0.007 & 0.964 $\pm$ 0.002 \\
+ & Chen et al. \cite{chen2022neuropred} & 0.940 & 0.953 & 0.947 & 0.894 & 0.984 & 0.897 & 0.975 & 0.936 & 0.875 & 0.988 \\
+  & BioAutoML-FAST & 0.907 $\pm$ 0.003 & 0.918 $\pm$ 0.005 & 0.907 $\pm$ 0.003 & 0.815 $\pm$ 0.005 & 0.965 $\pm$ 0.001 & \textbf{0.891} $\pm$ 0.007 & 0.938 $\pm$ 0.007 & 0.914 $\pm$ 0.005 & 0.829 $\pm$ 0.010 & 0.963 $\pm$ 0.002 \\
 \midrule
 \multirow{2}{=}{Model 38 - non-classical secreted proteins} 
- & Zhang et al. \cite{zhang2020pengaroo} & \\textbf{0.940} $\pm$ 0.008 & 0.861 $\pm$ 0.029 & 0.900 $\pm$ 0.016 & 0.803 $\pm$ 0.029 & 0.963 & \textbf{0.824} & 0.735 & 0.779 & 0.561 & - \\
-  & BioAutoML-FAST & 0.908 $\pm$ 0.056 & \textbf{0.881} $\pm$ 0.066 & \textbf{0.908} $\pm$ 0.056 & \textbf{0.821} $\pm$ 0.109 & \textbf{0.965} $\pm$ 0.037 & 0.712 $\pm$ 0.038 & \textbf{0.865} $\pm$ 0.092 & \textbf{0.788} $\pm$ 0.044 & \textbf{0.587} $\pm$ 0.095 & 0.860 $\pm$ 0.006 \\
+ & Zhang et al. \cite{zhang2020pengaroo} & 0.940 $\pm$ 0.008 & 0.861 $\pm$ 0.029 & 0.900 $\pm$ 0.016 & 0.803 $\pm$ 0.029 & 0.963 & 0.824 & 0.735 & 0.779 & 0.561 & - \\
+  & BioAutoML-FAST & \textbf{0.958} $\pm$ 0.005 & \textbf{0.940} $\pm$ 0.009 & \textbf{0.958} $\pm$ 0.005 & \textbf{0.917} $\pm$ 0.009 & \textbf{0.993} $\pm$ 0.001 & 0.606 $\pm$ 0.045 & \textbf{0.941} $\pm$ 0.021 & \textbf{0.774} $\pm$ 0.022 & \textbf{0.581} $\pm$ 0.041 & 0.843 $\pm$ 0.015 \\
 \midrule
 \multirow{2}{=}{Model 39 - peptide toxicity} 
- & Wei et al. \cite{wei2021atse} & - & - & - & - & - & \\textbf{0.965} $\pm$ 0.003 & \\textbf{0.940} $\pm$ 0.003 & \\textbf{0.952} $\pm$ 0.002 & \\textbf{0.903} $\pm$ 0.004 & 0.976 $\pm$ 0.001 \\
-  & BioAutoML-FAST & 0.936 $\pm$ 0.002 & 0.940 $\pm$ 0.002 & 0.936 $\pm$ 0.002 & 0.872 $\pm$ 0.004 & 0.979 $\pm$ 0.001 & 0.947 $\pm$ 0.004 & 0.934 $\pm$ 0.007 & 0.940 $\pm$ 0.005 & 0.880 $\pm$ 0.010 & \textbf{0.982} $\pm$ 0.002 \\
+ & Wei et al. \cite{wei2021atse} & - & - & - & - & - & 0.965 $\pm$ 0.003 & 0.940 $\pm$ 0.003 & 0.952 $\pm$ 0.002 & 0.903 $\pm$ 0.004 & 0.976 $\pm$ 0.001 \\
+  & BioAutoML-FAST & 0.936 $\pm$ 0.001 & 0.941 $\pm$ 0.002 & 0.936 $\pm$ 0.001 & 0.872 $\pm$ 0.003 & 0.980 $\pm$ 0.001 & 0.950 $\pm$ 0.005 & 0.931 $\pm$ 0.004 & 0.940 $\pm$ 0.003 & 0.879 $\pm$ 0.006 & \textbf{0.983} $\pm$ 0.001 \\
 \midrule
 \multirow{2}{=}{Model 40 - phage virion proteins} 
- & Charoenkwan et al. \cite{charoenkwan2020meta} & \textbf{0.860} & \textbf{0.832} & \textbf{0.846} & \textbf{0.698} & 0.874 & \textbf{0.889} & \textbf{0.746} & \textbf{0.817} & \textbf{0.642} & \textbf{0.870} \\
-  & BioAutoML-FAST & 0.813 $\pm$ 0.008 & 0.809 $\pm$ 0.020 & 0.813 $\pm$ 0.008 & 0.631 $\pm$ 0.018 & \textbf{0.877} $\pm$ 0.005 & 0.848 $\pm$ 0.029 & 0.724 $\pm$ 0.014 & 0.786 $\pm$ 0.019 & 0.576 $\pm$ 0.039 & 0.842 $\pm$ 0.010 \\
+ & Charoenkwan et al. \cite{charoenkwan2020meta} & 0.860 & 0.832 & 0.846 & 0.698 & 0.874 & 0.889 & 0.746 & 0.817 & 0.642 & 0.870 \\
+  & BioAutoML-FAST & 0.806 $\pm$ 0.015 & 0.800 $\pm$ 0.017 & 0.806 $\pm$ 0.015 & 0.614 $\pm$ 0.031 & \textbf{0.874} $\pm$ 0.006 & \textbf{0.838} $\pm$ 0.054 & 0.711 $\pm$ 0.031 & 0.775 $\pm$ 0.029 & 0.555 $\pm$ 0.061 & 0.835 $\pm$ 0.021 \\
 \midrule
 \multirow{2}{=}{Model 41 - proinflammatory peptides} 
- & Khatun et al. \cite{khatun2020proin} & 0.596 & 0.866 & 0.784 & 0.506 & 0.817 & \textbf{0.666} & \textbf{0.814} & \textbf{0.746} & \textbf{0.488} & \textbf{0.822} \\
-  & BioAutoML-FAST & \textbf{0.796} $\pm$ 0.056 & \textbf{0.902} $\pm$ 0.043 & \textbf{0.796} $\pm$ 0.056 & \textbf{0.606} $\pm$ 0.112 & \textbf{0.843} $\pm$ 0.050 & 0.537 $\pm$ 0.027 & 0.810 $\pm$ 0.078 & 0.684 $\pm$ 0.031 & 0.367 $\pm$ 0.064 & 0.707 $\pm$ 0.013 \\
+ & Khatun et al. \cite{khatun2020proin} & 0.596 & 0.866 & 0.784 & 0.506 & 0.817 & 0.666 & 0.814 & 0.746 & 0.488 & 0.822 \\
+  & BioAutoML-FAST & \textbf{0.794} $\pm$ 0.059 & \textbf{0.903} $\pm$ 0.042 & \textbf{0.794} $\pm$ 0.059 & \textbf{0.603} $\pm$ 0.116 & \textbf{0.844} $\pm$ 0.057 & 0.537 $\pm$ 0.030 & \textbf{0.800} $\pm$ 0.065 & 0.679 $\pm$ 0.023 & 0.354 $\pm$ 0.047 & 0.711 $\pm$ 0.016 \\
 \midrule
 \multirow{2}{=}{Model 42 - protein lysine crotonylation sites} 
- & Zhao et al. \cite{zhao2020identification} & 0.517 & \textbf{0.900} & \textbf{0.868} & \textbf{0.339} & \textbf{0.855} & 0.537 & \textbf{0.900} & \textbf{0.856} & \textbf{0.335} & \textbf{0.853} \\
-  & BioAutoML-FAST & \textbf{0.612} $\pm$ 0.021 & 0.597 $\pm$ 0.016 & 0.612 $\pm$ 0.021 & 0.224 $\pm$ 0.041 & 0.658 $\pm$ 0.024 & \textbf{0.591} $\pm$ 0.033 & 0.592 $\pm$ 0.011 & 0.592 $\pm$ 0.013 & 0.105 $\pm$ 0.025 & 0.634 $\pm$ 0.032 \\
+ & Zhao et al. \cite{zhao2020identification} & 0.517 & 0.900 & 0.868 & 0.339 & 0.855 & 0.537 & 0.900 & 0.856 & 0.335 & 0.853 \\
+  & BioAutoML-FAST & \textbf{0.603} $\pm$ 0.006 & 0.594 $\pm$ 0.006 & 0.603 $\pm$ 0.006 & 0.205 $\pm$ 0.011 & 0.646 $\pm$ 0.001 & \textbf{0.579} $\pm$ 0.015 & 0.589 $\pm$ 0.009 & 0.588 $\pm$ 0.007 & 0.095 $\pm$ 0.004 & 0.621 $\pm$ 0.008 \\
 \midrule
 \multirow{2}{=}{Model 43 - quorum-sensing peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.909} & \textbf{1.000} & \textbf{0.950} & \textbf{0.905} & \textbf{0.990} \\
-  & BioAutoML-FAST & 0.925 $\pm$ 0.012 & 0.920 $\pm$ 0.016 & 0.925 $\pm$ 0.012 & 0.853 $\pm$ 0.023 & 0.973 $\pm$ 0.005 & 0.840 $\pm$ 0.022 & 0.990 $\pm$ 0.022 & 0.915 $\pm$ 0.014 & 0.840 $\pm$ 0.027 & 0.936 $\pm$ 0.014 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.909 & 1.000 & 0.950 & 0.905 & 0.990 \\
+  & BioAutoML-FAST & 0.924 $\pm$ 0.008 & 0.922 $\pm$ 0.013 & 0.924 $\pm$ 0.008 & 0.850 $\pm$ 0.016 & 0.971 $\pm$ 0.003 & 0.850 $\pm$ 0.000 & \textbf{0.980} $\pm$ 0.045 & 0.915 $\pm$ 0.022 & 0.838 $\pm$ 0.049 & 0.930 $\pm$ 0.010 \\
 \midrule
 \multirow{2}{=}{Model 44 - real microRNA precursors} 
- & Liu et al. \cite{liu2015identification} & \textbf{0.884} & \textbf{0.835} & \textbf{0.858} & \textbf{0.720} & - & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.809 $\pm$ 0.008 & 0.829 $\pm$ 0.011 & 0.809 $\pm$ 0.008 & 0.620 $\pm$ 0.016 & 0.892 $\pm$ 0.005 & - & - & - & - & - \\
+ & Liu et al. \cite{liu2015identification} & 0.884 & 0.835 & 0.858 & 0.720 & - & - & - & - & - & - \\
+  & BioAutoML-FAST & 0.807 $\pm$ 0.005 & 0.820 $\pm$ 0.009 & 0.807 $\pm$ 0.005 & 0.615 $\pm$ 0.010 & 0.889 $\pm$ 0.006 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 45 - ribosome binding site sequences} 
- & Valeri et al. \cite{valeri2023bioautomated} & - & - & - & \textbf{0.825} & \textbf{0.971} & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.859 $\pm$ 0.000 & 0.887 $\pm$ 0.001 & 0.859 $\pm$ 0.000 & 0.719 $\pm$ 0.001 & 0.936 $\pm$ 0.001 & - & - & - & - & - \\
+ & Valeri et al. \cite{valeri2023bioautomated} & - & - & - & 0.825 & 0.971 & - & - & - & - & - \\
+  & BioAutoML-FAST & 0.861 $\pm$ 0.002 & 0.889 $\pm$ 0.002 & 0.861 $\pm$ 0.002 & 0.722 $\pm$ 0.005 & 0.938 $\pm$ 0.002 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 46 - sigma70 promoters} 
- & Lin et al. \cite{lin2017identifying} & 0.803 & \textbf{0.868} & \textbf{0.845} & 0.663 & 0.909 & - & - & - & - & - \\
-  & BioAutoML-FAST & \textbf{0.834} $\pm$ 0.035 & 0.837 $\pm$ 0.049 & 0.834 $\pm$ 0.035 & \textbf{0.669} $\pm$ 0.069 & \textbf{0.916} $\pm$ 0.043 & - & - & - & - & - \\
+ & Lin et al. \cite{lin2017identifying} & 0.803 & 0.868 & 0.845 & 0.663 & 0.909 & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.855} $\pm$ 0.004 & 0.859 $\pm$ 0.006 & \textbf{0.855} $\pm$ 0.004 & \textbf{0.710} $\pm$ 0.009 & \textbf{0.937} $\pm$ 0.001 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 47 - small non-coding RNA and shuffled sequences} 
- & Barman et al. \cite{barman2017improved} & 0.851 & \textbf{0.916} & \textbf{0.884} & \textbf{0.770} & 0.937 & - & - & - & - & - \\
-  & BioAutoML-FAST & \textbf{0.870} $\pm$ 0.008 & 0.873 $\pm$ 0.014 & 0.869 $\pm$ 0.008 & 0.745 $\pm$ 0.015 & \textbf{0.951} $\pm$ 0.009 & - & - & - & - & - \\
+ & Barman et al. \cite{barman2017improved} & 0.851 & 0.916 & 0.884 & 0.770 & 0.937 & - & - & - & - & - \\
+  & BioAutoML-FAST & \textbf{0.879} $\pm$ 0.012 & 0.874 $\pm$ 0.014 & \textbf{0.879} $\pm$ 0.012 & \textbf{0.763} $\pm$ 0.023 & \textbf{0.949} $\pm$ 0.004 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 48 - toehold switch sequences} 
- & Valeri et al. \cite{valeri2023bioautomated} & - & - & - & \textbf{0.655} & \textbf{0.926} & - & - & - & - & - \\
-  & BioAutoML-FAST & 0.766 $\pm$ 0.002 & 0.749 $\pm$ 0.002 & 0.766 $\pm$ 0.002 & 0.533 $\pm$ 0.003 & 0.849 $\pm$ 0.001 & - & - & - & - & - \\
+ & Valeri et al. \cite{valeri2023bioautomated} & - & - & - & 0.655 & 0.926 & - & - & - & - & - \\
+  & BioAutoML-FAST & 0.768 $\pm$ 0.001 & 0.752 $\pm$ 0.002 & 0.768 $\pm$ 0.001 & 0.536 $\pm$ 0.003 & 0.850 $\pm$ 0.001 & - & - & - & - & - \\
 \midrule
 \multirow{2}{=}{Model 49 - Tumor T cell antigens} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.763 & \textbf{0.724} & \textbf{0.751} & \textbf{0.457} & \textbf{0.788} \\
-  & BioAutoML-FAST & 0.780 $\pm$ 0.019 & 0.714 $\pm$ 0.019 & 0.780 $\pm$ 0.019 & 0.567 $\pm$ 0.041 & 0.842 $\pm$ 0.009 & \textbf{0.797} $\pm$ 0.028 & 0.552 $\pm$ 0.028 & 0.704 $\pm$ 0.022 & 0.359 $\pm$ 0.047 & 0.759 $\pm$ 0.024 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.763 & 0.724 & 0.751 & 0.457 & 0.788 \\
+  & BioAutoML-FAST & 0.793 $\pm$ 0.008 & 0.713 $\pm$ 0.012 & 0.793 $\pm$ 0.008 & 0.595 $\pm$ 0.016 & 0.855 $\pm$ 0.006 & \textbf{0.818} $\pm$ 0.017 & 0.573 $\pm$ 0.009 & 0.725 $\pm$ 0.011 & 0.404 $\pm$ 0.022 & 0.774 $\pm$ 0.005 \\
 \midrule
 \multirow{2}{=}{Model 50 - umami peptides} 
- & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & \textbf{0.846} & 0.905 & \textbf{0.888} & \textbf{0.735} & \textbf{0.948} \\
-  & BioAutoML-FAST & 0.906 $\pm$ 0.012 & 0.901 $\pm$ 0.013 & 0.906 $\pm$ 0.012 & 0.814 $\pm$ 0.025 & 0.967 $\pm$ 0.004 & 0.607 $\pm$ 0.056 & \textbf{0.925} $\pm$ 0.019 & 0.825 $\pm$ 0.020 & 0.576 $\pm$ 0.052 & 0.923 $\pm$ 0.013 \\
+ & Du et al. \cite{du2023unidl4biopep} & - & - & - & - & - & 0.846 & 0.905 & 0.888 & 0.735 & 0.948 \\
+  & BioAutoML-FAST & 0.914 $\pm$ 0.009 & 0.908 $\pm$ 0.019 & 0.914 $\pm$ 0.009 & 0.832 $\pm$ 0.016 & 0.969 $\pm$ 0.003 & 0.621 $\pm$ 0.032 & \textbf{0.915} $\pm$ 0.007 & 0.822 $\pm$ 0.015 & 0.572 $\pm$ 0.037 & 0.924 $\pm$ 0.006 \\
